Update models and bot

--- a/resources/CodEbot.ipynb
+++ b/resources/CodEbot.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -180,7 +180,152 @@
     "id": "RwM1UqZu61BX",
     "outputId": "9795e34d-8d07-4cdf-fb8d-90d4c0d64f7f"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>intent</th>\n",
+       "      <th>context</th>\n",
+       "      <th>question</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>246</th>\n",
+       "      <td>disagree</td>\n",
+       "      <td>general</td>\n",
+       "      <td>không, tôi không đồng ý</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>credit_info</td>\n",
+       "      <td>general</td>\n",
+       "      <td>bạn có thể làm được những gì?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>143</th>\n",
+       "      <td>compare</td>\n",
+       "      <td>py</td>\n",
+       "      <td>Trong python, list và tuple khác nhau như thế ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>360</th>\n",
+       "      <td>other</td>\n",
+       "      <td>general</td>\n",
+       "      <td>R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>define</td>\n",
+       "      <td>general</td>\n",
+       "      <td>Python là gì</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397</th>\n",
+       "      <td>references</td>\n",
+       "      <td>general</td>\n",
+       "      <td>tôi có thể tìm tài liệu học lập trình ở đâu?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>compare</td>\n",
+       "      <td>general</td>\n",
+       "      <td>Cho biết sự khác nhau giữa linker và linkage</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>365</th>\n",
+       "      <td>other</td>\n",
+       "      <td>general</td>\n",
+       "      <td>thông tin covid19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>352</th>\n",
+       "      <td>other</td>\n",
+       "      <td>general</td>\n",
+       "      <td>khi nào thì em mới chịu yêu anh?</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>310</th>\n",
+       "      <td>help</td>\n",
+       "      <td>general</td>\n",
+       "      <td>trợ giúp</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>274</th>\n",
+       "      <td>greeting</td>\n",
+       "      <td>general</td>\n",
+       "      <td>hello</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>compare</td>\n",
+       "      <td>cpp</td>\n",
+       "      <td>Trong C++, sự khác nhau giữa bộ nhớ stack và h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>apply</td>\n",
+       "      <td>general</td>\n",
+       "      <td>Cách sử dụng biến</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>disagree</td>\n",
+       "      <td>general</td>\n",
+       "      <td>không phải vậy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>353</th>\n",
+       "      <td>other</td>\n",
+       "      <td>general</td>\n",
+       "      <td>khi nào thì mình có thể nhịn ăn sáng?</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          intent  context                                           question\n",
+       "246     disagree  general                            không, tôi không đồng ý\n",
+       "149  credit_info  general                      bạn có thể làm được những gì?\n",
+       "143      compare       py  Trong python, list và tuple khác nhau như thế ...\n",
+       "360        other  general                                                  R\n",
+       "216       define  general                                       Python là gì\n",
+       "397   references  general       tôi có thể tìm tài liệu học lập trình ở đâu?\n",
+       "122      compare  general       Cho biết sự khác nhau giữa linker và linkage\n",
+       "365        other  general                                  thông tin covid19\n",
+       "352        other  general                   khi nào thì em mới chịu yêu anh?\n",
+       "310         help  general                                           trợ giúp\n",
+       "274     greeting  general                                              hello\n",
+       "111      compare      cpp  Trong C++, sự khác nhau giữa bộ nhớ stack và h...\n",
+       "62         apply  general                                  Cách sử dụng biến\n",
+       "239     disagree  general                                     không phải vậy\n",
+       "353        other  general              khi nào thì mình có thể nhịn ăn sáng?"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "if (os.path.basename(os.getcwd()) != \"CodEbot\"):\n",
     "    os.chdir('../')\n",
@@ -202,9 +347,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                                        cậu biết ý tớ đó\n",
+       "1                              câu trả lời thật là bổ ích\n",
+       "2                         câu trả lời thật là bổ ích đó ạ\n",
+       "3                                             chắc là vậy\n",
+       "4                                                chắc thế\n",
+       "                              ...                        \n",
+       "1591    Cách dùng biến __metaclass__ không còn được hỗ...\n",
+       "1592                                   Cú pháp bị loại bỏ\n",
+       "1593              Không còn dấu ``, thay vì đó, dùng repr\n",
+       "1594                       Không còn so sánh <> (dùng !=)\n",
+       "1595                       Không còn các lớp kiểu classic\n",
+       "Length: 1596, dtype: object"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "corpus_path = './data/programming_corpus'\n",
     "corpus = [X]\n",
@@ -226,9 +393,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python37\\lib\\site-packages\\sklearn\\feature_extraction\\text.py:507: UserWarning: The parameter 'token_pattern' will not be used since 'tokenizer' is not None'\n",
+      "  warnings.warn(\"The parameter 'token_pattern' will not be used\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving model to  ./model/preprocessing.bin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['./model/preprocessing.bin']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tfidf__ngram_range = (1, 2)\n",
     "tfidf__max_df = 1.0\n",
@@ -280,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -305,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -319,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -341,12 +534,100 @@
     "id": "xOV1VKmI61B1",
     "outputId": "2e9a82be-0421-4c8e-aaed-4b8bc68049fa"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "micro f1_score of TRAIN_intent: 0.9941860465116279\n",
+      "\n",
+      "classification_report of TRAIN_intent:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       agree       1.00      0.95      0.97        37\n",
+      "       apply       1.00      1.00      1.00        45\n",
+      "     compare       1.00      1.00      1.00        35\n",
+      " credit_info       1.00      1.00      1.00        19\n",
+      "      define       1.00      1.00      1.00        49\n",
+      "    disagree       1.00      1.00      1.00        26\n",
+      "    greeting       1.00      1.00      1.00        13\n",
+      "        help       1.00      1.00      1.00        41\n",
+      "       other       0.95      1.00      0.97        35\n",
+      "  references       1.00      1.00      1.00        30\n",
+      "         tip       1.00      1.00      1.00        14\n",
+      "\n",
+      "    accuracy                           0.99       344\n",
+      "   macro avg       1.00      1.00      0.99       344\n",
+      "weighted avg       0.99      0.99      0.99       344\n",
+      "\n",
+      "micro f1_score of TEST_intent: 0.9534883720930233\n",
+      "\n",
+      "classification_report of TEST_intent:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       agree       1.00      0.67      0.80         9\n",
+      "       apply       1.00      0.91      0.95        11\n",
+      "     compare       0.90      1.00      0.95         9\n",
+      " credit_info       1.00      1.00      1.00         5\n",
+      "      define       1.00      1.00      1.00        12\n",
+      "    disagree       0.75      1.00      0.86         6\n",
+      "    greeting       1.00      1.00      1.00         4\n",
+      "        help       1.00      1.00      1.00        10\n",
+      "       other       0.90      1.00      0.95         9\n",
+      "  references       1.00      1.00      1.00         7\n",
+      "         tip       1.00      1.00      1.00         4\n",
+      "\n",
+      "    accuracy                           0.95        86\n",
+      "   macro avg       0.96      0.96      0.95        86\n",
+      "weighted avg       0.96      0.95      0.95        86\n",
+      "\n",
+      "micro f1_score of TRAIN_context: 1.0\n",
+      "\n",
+      "classification_report of TRAIN_context:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         cpp       1.00      1.00      1.00        72\n",
+      "     general       1.00      1.00      1.00       210\n",
+      "          py       1.00      1.00      1.00        62\n",
+      "\n",
+      "    accuracy                           1.00       344\n",
+      "   macro avg       1.00      1.00      1.00       344\n",
+      "weighted avg       1.00      1.00      1.00       344\n",
+      "\n",
+      "micro f1_score of TEST_context: 0.9651162790697675\n",
+      "\n",
+      "classification_report of TEST_context:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         cpp       0.94      0.94      0.94        18\n",
+      "     general       0.96      0.98      0.97        52\n",
+      "          py       1.00      0.94      0.97        16\n",
+      "\n",
+      "    accuracy                           0.97        86\n",
+      "   macro avg       0.97      0.95      0.96        86\n",
+      "weighted avg       0.97      0.97      0.97        86\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python37\\lib\\site-packages\\sklearn\\svm\\_base.py:947: ConvergenceWarning: Liblinear failed to converge, increase the number of iterations.\n",
+      "  \"the number of iterations.\", ConvergenceWarning)\n"
+     ]
+    }
+   ],
    "source": [
+    "C = {\n",
+    "    \"intent\": 0.5,\n",
+    "    \"context\": 100\n",
+    "}\n",
+    "\n",
     "for column in [\"intent\", \"context\"]:\n",
     "    X_train, X_test, y_train, y_test = train_test_split(X_processed, y[column], test_size=0.2, random_state=46,stratify=y[column])\n",
     "    \n",
-    "    model = LinearSVC(C=10, random_state=46)\n",
+    "    model = LinearSVC(C=C[column], random_state=46)\n",
     "    model.fit(X_train, y_train)\n",
     "    \n",
     "    pred = model.predict(X_train)\n",
@@ -370,16 +651,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "xi0Zdcqo61DM"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f1_score of AllData_intent: 0.9953488372093023\n",
+      "f1_score of AllData_context: 1.0\n"
+     ]
+    }
+   ],
    "source": [
     "for column in [\"intent\", \"context\"]:\n",
-    "    model = LinearSVC(C=10, random_state=46)\n",
+    "    model = LinearSVC(C=C[column], random_state=46)\n",
     "    model.fit(X_processed, y[column])\n",
     "\n",
     "    pred = model.predict(X_processed)\n",
